// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render cancel slot correctly 1`] = `
<button type="button"
        class="r-share-sheet__cancel"
>
  Custom Cancel
</button>
`;

exports[`should render cancel text when using cancel-text prop 1`] = `
<button type="button"
        class="r-share-sheet__cancel"
>
  foo
</button>
`;

exports[`should render description when using description prop 1`] = `
<span class="r-share-sheet__description">
  foo
</span>
`;

exports[`should render title and description slot correctly 1`] = `
<transition-stub name="r-fade"
                 appear="true"
                 persisted="false"
                 css="true"
                 role="button"
                 tabindex="0"
>
  <div class="r-overlay">
  </div>
</transition-stub>
<transition-stub name="r-popup-slide-bottom"
                 appear="false"
                 persisted="false"
                 css="true"
>
  <div role="dialog"
       tabindex="0"
       class="r-popup r-popup--round r-popup--bottom r-safe-area-bottom r-share-sheet"
  >
    <div class="r-share-sheet__header">
      <h2 class="r-share-sheet__title">
        Custom Title
      </h2>
      <span class="r-share-sheet__description">
        Custom Description
      </span>
    </div>
    <div class="r-share-sheet__options">
    </div>
    <button type="button"
            class="r-share-sheet__cancel"
    >
      Cancel
    </button>
  </div>
</transition-stub>
`;
